test:优化 PlaywrightManager测试用例
- 移除了不必要的系统输出语句，使测试结果更加清晰
- 添加了对页面标题和内容的断言，提高测试准确性
- 优化了异常处理测试，使用 assertThat 提高可读性
- 统一了测试结构，提高了代码的可维护性